# vocabext

./: .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  words.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  logging_config.py  main.py  models.py
app/cli/: __init__.py  main.py
app/cli/commands/: process.py  review.py  status.py  sync.py  vocabulary.py
app/cli/utils/: __init__.py  async_runner.py  console.py  progress.py
app/routes/: __init__.py  documents.py  extractions.py  sync.py  vocabulary.py
app/services/: __init__.py  anki.py  enricher.py  events.py  extractor.py  llm.py  tokenizer.py
app/services/dictionary/: __init__.py  base.py  cache.py  service.py  spacy_backend.py
app/tasks/: __init__.py  processing.py
app/templates/: base.html
app/templates/documents/: list.html  review.html
app/templates/partials/: extraction_edit.html  extraction_row.html  version_comparison.html  version_history.html  word_diff.html  word_edit.html  word_row.html
app/templates/vocabulary/: detail.html  list.html
data/: vocab.db
docs/: llm-pipelines.md
scripts/: __init__.py  migrate_batch_validate.py  migrate_versioning.py
static/css/: style.css
tests/: __init__.py  conftest.py  test_anki.py  test_cli_vocabulary.py  test_config.py  test_database.py  test_dictionary.py  test_documents.py  test_enricher.py  test_events.py  test_extractions.py  test_extractor.py  test_llm.py  test_models.py  test_processing.py  test_routes.py  test_services.py  test_sync.py  test_tokenizer.py  test_versioning.py  test_vocabulary.py
