[project]
name = "vocabext"
version = "0.1.0"
description = "German vocabulary extraction tool with Anki sync"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.1.0",
    "spacy>=3.7.2",
    "de-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.8.0/de_core_news_lg-3.8.0-py3-none-any.whl",
    "pdfplumber>=0.10.3",
    "python-pptx>=0.6.23",
    "openai-whisper>=20231117",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []
